[package]
name = "mullvad-problem-report"
edition.workspace = true
rust-version.workspace = true
description = "Collect Mullvad VPN logs into a report and send it to support"
repository.workspace = true
license.workspace = true

[package.metadata.winres]
ProductName = "Mullvad VPN"
CompanyName = "Mullvad VPN AB"
LegalCopyright = "(c) 2026 Mullvad VPN AB"
InternalName = "mullvad-problem-report"
OriginalFilename = "mullvad-problem-report.exe"

[dependencies]
dirs = { workspace = true }
log = { workspace = true }
mullvad-api = { path = "../mullvad-api" }
mullvad-paths = { path = "../mullvad-paths" }
mullvad-version = { path = "../mullvad-version" }
regex = "1.0"
talpid-platform-metadata = { path = "../talpid-platform-metadata" }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
uuid = { version = "1.4.1", features = ["v4"] }

[target.'cfg(not(target_os="android"))'.dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
mullvad-version = { path = "../mullvad-version" }
winres = "0.1"

[target.'cfg(windows)'.build-dependencies.windows-sys]
workspace = true
features = [
  "Win32_System_SystemServices",
]

[lints]
workspace = true
