[package]
name = "mullvad-relay-selector"
description = "Mullvad VPN relay selector"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
staggered-obfuscation = []

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
ipnetwork = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }

talpid-types = { path = "../talpid-types" }
mullvad-types = { path = "../mullvad-types" }

[dev-dependencies]
proptest = { workspace = true }
vec1 = { workspace = true }
