[package]
name = "mullvad-relay-selector"
edition.workspace = true
rust-version.workspace = true
description = "Mullvad VPN relay selector"
repository.workspace = true
license.workspace = true

[dependencies]
ipnetwork = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
mullvad-types = { path = "../mullvad-types" }
rand = { workspace = true }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
vec1 = { workspace = true }

[features]
default = []
staggered-obfuscation = []

[lints]
workspace = true
