[package]
name = "mullvad-release-android"
description = "Tools for managing Mullvad release metadata for Android"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true }

mullvad-api = { path = "../mullvad-api" }
mullvad-api-constants = { path = "../mullvad-api/mullvad-api-constants" }
mullvad-version = { path = "../mullvad-version", features = ["serde"] }
