[package]
name = "mullvad-release-android"
edition.workspace = true
rust-version.workspace = true
description = "Tools for managing Mullvad release metadata for Android"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { workspace = true }
mullvad-api = { path = "../mullvad-api" }
mullvad-api-constants = { path = "../mullvad-api/mullvad-api-constants" }
mullvad-version = { path = "../mullvad-version", features = ["serde"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
