[package]
name = "mullvad-rpc"
version = "0.1.0"
authors = ["Mullvad VPN"]
description = "Mullvad VPN RPC clients. Providing an interface to query our infrastructure for information."
license = "GPL-3.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
err-derive = "0.2.1"
futures = "0.1.15"
jsonrpc-client-core = "0.5"
jsonrpc-client-http = "0.5"
serde_json = "1.0"
tokio-core = "0.1"
hyper = "0.11"
hyper-openssl = "0.5"
tokio-service = "0.1"
tokio-openssl = "0.2"
log = "0.4"

mullvad-types = { path = "../mullvad-types" }
talpid-types = { path = "../talpid-types" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3.0"
