[package]
name = "mullvad-rpc"
version = "0.1.0"
authors = ["Mullvad VPN"]
description = "Mullvad VPN RPC clients. Providing an interface to query our infrastructure for information."
license = "GPL-3.0"
edition = "2018"
publish = false

[dependencies]
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
err-derive = "0.2.1"
futures = "0.3"
http = "0.2"
hyper = "0.13"
ipnetwork = "0.16"
log = "0.4"
rand = "0.7"
regex = "1"
serde = "1"
serde_json = "1.0"
hyper-rustls = "0.21"
tokio = { version = "0.2", features = [ "macros", "time", "rt-threaded", "net", "io-std", "io-driver", "fs" ] }
tokio-rustls = "0.14"
urlencoding = "1"
webpki = { version = "0.21", features =  [] }

mullvad-types = { path = "../mullvad-types" }
talpid-types = { path = "../talpid-types" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3.0"

[[bin]]
name = "relay_list"

[[bin]]
name = "address_cache"
