[package]
name = "mullvad-rpc"
version = "0.1.0"
authors = ["Mullvad VPN"]
description = "Mullvad VPN RPC clients. Providing an interface to query our infrastructure for information."
license = "GPL-3.0"
edition = "2018"
publish = false

[dependencies]
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
err-derive = "0.3.0"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "stream"] }
ipnetwork = "0.16"
log = "0.4"
rand = "0.7"
regex = "1"
serde = "1"
serde_json = "1.0"
hyper-rustls = "0.22"
tokio = { version = "1.8", features = [ "macros", "time", "rt-multi-thread", "net", "io-std", "fs" ] }
tokio-rustls = "0.22"
urlencoding = "1"
webpki = { version = "0.21", features =  [] }

mullvad-types = { path = "../mullvad-types" }
talpid-types = { path = "../talpid-types" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3.0"

[target.'cfg(target_os="android")'.dependencies]
socket2 = "0.3"

[target.'cfg(target_os="macos")'.dependencies]
tokio-stream = { version = "0.1", features = ["io-util"] }

[[bin]]
name = "relay_list"

[[bin]]
name = "address_cache"
