[package]
name = "mullvad-setup"
edition.workspace = true
rust-version.workspace = true
description = "Tool used to manage daemon setup"
repository.workspace = true
license.workspace = true

[[bin]]
name = "mullvad-setup"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
mullvad-api = { path = "../mullvad-api" }
mullvad-daemon = { path = "../mullvad-daemon" }
mullvad-management-interface = { path = "../mullvad-management-interface" }
mullvad-paths = { path = "../mullvad-paths" }
mullvad-types = { path = "../mullvad-types" }
mullvad-version = { path = "../mullvad-version" }
talpid-core = { path = "../talpid-core" }
talpid-future = { path = "../talpid-future" }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = ["Win32_Foundation"]

[lints]
workspace = true
