[package]
name = "mullvad-setup"
edition.workspace = true
rust-version.workspace = true
description = "Tool used to manage daemon setup"
repository.workspace = true
license.workspace = true

[[bin]]
name = "mullvad-setup"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
mullvad-api = { path = "../mullvad-api" }
mullvad-daemon = { path = "../mullvad-daemon" }
mullvad-management-interface = { path = "../mullvad-management-interface" }
mullvad-paths = { path = "../mullvad-paths" }
mullvad-types = { path = "../mullvad-types" }
mullvad-version = { path = "../mullvad-version" }
talpid-core = { path = "../talpid-core" }
talpid-future = { path = "../talpid-future" }
talpid-types = { path = "../talpid-types" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_Properties",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
]

[lints]
workspace = true
