[package]
name = "mullvad-tests"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>"]
description = "Mullvad test specific modules and binaries"
license = "GPL-3.0"
edition = "2018"

[features]
integration-tests = []

[dependencies]
duct = "0.13"
mullvad-ipc-client = { path = "../mullvad-ipc-client" }
mullvad-paths = { path = "../mullvad-paths" }
mullvad-types = { path = "../mullvad-types" }
notify = "4.0"
openvpn-plugin = { git = "https://github.com/mullvad/openvpn-plugin-rs", branch = "auth-failed-event", features = ["serde"] }
talpid-ipc = { path = "../talpid-ipc" }
talpid-types = { path = "../talpid-types" }
tempfile = "3.0"
jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-pubsub = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
tokio = "0.1"
tokio-timer = "0.1"
futures = "0.1.23"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
